# mesh-simplifier

./: .gitignore  CMakeLists.txt  README.md  linux_build.sh  main.cpp  test.cpp  unit_tests
include/: Bitmap.hpp  Parser.hpp  QEMSimplifier.hpp  Tools.hpp  Types.cpp  Types.hpp  Writer.hpp  thread_logic.hpp
report/: report.md
src/: Parser.cpp  QEMSimplifier.cpp  Tools.cpp  Writer.cpp  thread_logic.cpp
